# prototype-dbt-test-results-ext

./: .pre-commit-config.yaml  README.md  pyproject.toml
dbt_artifacts_ext/: __init__.py  extension.py  main.py
dbt_artifacts_ext/converter/: __init__.py  factory.py  matatika.py  mermaid.py
dbt_artifacts_ext/tests/: catalog.json  conftest.py  manifest.json  test_converter.py  test_dataset.py
