[tool.poetry]
name = "dbt-artifacts-ext"
version = "0.1.0"
description = "`dbt-artifacts-ext` is a Meltano utility extension."
authors = ["Reuben Frankel"]
license = "Apache 2.0"
packages = [
    { include = "dbt_artifacts_ext" }
    # uncomment this if you want to include static assets
    # { include = "files_dbt-artifacts-ext.*" }
]
# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_dbt-artifacts-ext/"
#include = [
#    "files_dbt-artifacts-ext/somefile.thing"
#]

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
PyYAML = "^6.0.0"
click = ">=8.1.3,<8.3.0"
typer = "^0.6.1"
"meltano.edk" = "<=0.5.0"
matatika = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "<8"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-artifacts_extension = 'dbt_artifacts_ext.main:app'
